All white background tests pass. OCR settings broke black background. Need to work on reOCR strumming.